MOC-11: Add general.component.html config

--- a/mockez-front/src/app/core/layout/navigation/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/core/layout/navigation/component/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class='back-color-white d-flex'>
   <div class='left d-flex al-items-center'>
     <div class='logo d-flex al-items-center c-pointer'>
-      <img class='icon' src='assets/icon/navigation/panda.png' alt='logo'/>
+      <img src='assets/icon/navigation/panda.png' alt='logo'/>
       <span class='f-weight-bold'>MOCKEZ</span>
     </div>
     <div class='search d-flex al-items-center b-radius-10'>
