--- a/mockez-front/src/styles.scss
+++ b/mockez-front/src/styles.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+::selection {
+  background-color: transparent;
+}
+
 body {
   background-color: #F0F2F5;
   font-family: 'Roboto', sans-serif;
