--- a/mockez-front/src/app/core/layout/navigation/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/core/layout/navigation/component/navigation/navigation.component.html
@@ -1,27 +1,27 @@
-<nav class='back-color-white d-flex'>
-  <div class='left d-flex al-items-center'>
-    <div class='logo d-flex al-items-center c-pointer'>
-      <img src='assets/icon/navigation/panda.png' alt='logo'/>
-      <span class='f-weight-bold'>MOCKEZ</span>
+<nav class='sticky top-0 left-0 bg-white flex justify-between h-14 px-8 py-0'>
+  <div class='flex items-center h-full w-72'>
+    <div class='flex items-center cursor-pointer'>
+      <img class='logo' src='assets/icon/navigation/panda.png' alt='logo'/>
+      <span class='font-medium ml-3'>MOCKEZ</span>
     </div>
-    <div class='search d-flex al-items-center b-radius-10'>
+    <div class='flex items-center bg-gray rounded-md ml-5 p-2.5 w-44 h-10'>
       <img src='assets/icon/navigation/search.png' alt='search'/>
-      <input class='outline-border-none' type='text' placeholder='Search Mockez'/>
+      <input class='outline-border-none bg-gray w-28 ml-2.5' type='text' placeholder='Search Mockez'/>
     </div>
   </div>
-  <div class='center d-flex'>
-    <a href='#' class='f-weight-bold active'>GENERAL</a>
-    <a href='#' class='f-weight-bold'>DATASET</a>
-    <a href='#' class='f-weight-bold'>MOCK API</a>
-    <a href='#' class='f-weight-bold'>SCHEMA</a>
-    <a href='#' class='f-weight-bold'>PROJECT</a>
+  <div class='flex h-full mx-8 my-0'>
+    <a href='#' class='no-underline text-center text-black font-medium w-24 active'>GENERAL</a>
+    <a href='#' class='no-underline text-center text-black font-medium w-24'>DATASET</a>
+    <a href='#' class='no-underline text-center text-black font-medium w-24'>MOCK API</a>
+    <a href='#' class='no-underline text-center text-black font-medium w-24'>SCHEMA</a>
+    <a href='#' class='no-underline text-center text-black font-medium w-24'>PROJECT</a>
   </div>
-  <div class='right d-flex al-items-center'>
-    <img class='icon c-pointer' [src]='isLight ? "assets/icon/navigation/sun.png" : "assets/icon/navigation/moon.png"'
+  <div class='flex items-center h-full justify-end w-72'>
+    <img class='icon cursor-pointer mr-8' [src]='isLight ? "assets/icon/navigation/sun.png" : "assets/icon/navigation/moon.png"'
          [alt]='isLight ? "light" : "dark" '/>
-    <img class='icon c-pointer' src='assets/icon/navigation/settings.png' alt='setting'/>
-    <img class='icon c-pointer' src='assets/icon/navigation/notification.png' alt='notification'/>
-    <img class='icon c-pointer' src='assets/icon/navigation/facebook_messenger.png' alt='facebook messenger'/>
-    <img class='icon c-pointer' src='assets/icon/navigation/user.png' alt='user'/>
+    <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/settings.png' alt='setting'/>
+    <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/notification.png' alt='notification'/>
+    <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/facebook_messenger.png' alt='facebook messenger'/>
+    <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/user.png' alt='user'/>
   </div>
 </nav>
