--- a/mockez-front/src/app/core/layout/navigation/component/navigation/navigation.component.scss
+++ b/mockez-front/src/app/core/layout/navigation/component/navigation/navigation.component.scss
@@ -1,67 +1,20 @@
 nav {
-  height: 54px;
-  justify-content: space-between;
-  padding: 0 30px;
   font-size: 15px;
+  box-shadow: 0 10px 10px rgba(225, 225, 225, 0.65);
 
-  > div {
-    height: 100%;
+  .logo {
+    width: 30px;
+    height: 30.6px;
   }
 
-  .left,
-  .right {
-    width: 350px;
-  }
 
-  .icon {
-    width: 25px;
-  }
-
-  .left {
-    .logo {
-      span {
-        margin-left: 20px;
-      }
-
-      img {
-        width: 30px;
-        height: 30.6px;
-      }
-    }
-
-    .search {
-      margin-left: 20px;
-      background-color: #F0F2F5;
-      padding: 10px;
-      width: 200px;
-      height: 40px;
-
-      img {
-        width: 20px;
-        height: 20px;
-      }
-
-      input {
-        width: 200px;
-        margin-left: 10px;
-        background-color: #F0F2F5;
-      }
-    }
-  }
-
-  .center {
-    margin: 0 30px;
-
+  > div:nth-child(2) {
     a {
-      width: 100px;
-      line-height: 54px;
-      text-decoration: none;
-      text-align: center;
-      color: #000;
+      line-height: 56px;
     }
 
     a:hover {
-      background-color: #e8f1ff;
+      background-color: #F5F5F5;
     }
 
     .active {
@@ -72,18 +25,15 @@ nav {
       content: '';
       display: block;
       position: absolute;
-      width: 100px;
+      width: 100%;
       height: 4px;
       bottom: 0;
+      border-radius: 5px;
       background-color: #3DA2FF;
     }
   }
 
-  .right {
-    justify-content: flex-end;
-
-    img {
-      margin-left: 30px;
-    }
+  > div:nth-child(3) {
+    margin-right: -32px;
   }
 }
