MOC-12 config footer of general

--- a/mockez-front/src/app/general/component/popup/popup.component.html
+++ b/mockez-front/src/app/general/component/popup/popup.component.html
@@ -1,4 +1,4 @@
-<div id='popup' class='fixed top-0 left-0 w-full h-full'>
+<div id='popup' class='fixed z-10 top-0 left-0 w-full h-full'>
   <div class='board bg-white rounded-md absolute p-2.5'>
     <div class='header flex items-center justify-center'>
       <div class='item active text-center rounded-md shadow-light cursor-pointer flex items-center ml-2.5 p-2.5 h-10'>
