--- a/mockez-front/src/app/general/component/preview/preview.component.scss
+++ b/mockez-front/src/app/general/component/preview/preview.component.scss
@@ -1,4 +1,5 @@
 #preview {
+  font-size: 14px;
   z-index: 11;
   background-color: rgba(0, 0, 0, 0.6);
 
@@ -13,7 +14,7 @@
 
     nav {
       a {
-        line-height: 56px;
+        line-height: 40px;
       }
 
       a:hover {
