--- a/mockez-front/src/app/general/component/general/general.component.html
+++ b/mockez-front/src/app/general/component/general/general.component.html
@@ -1,101 +1,2 @@
-<div id='form' class='mt-28 mb-60 mx-auto'>
-  <div class='flex ml-5 justify-center' *ngIf='table.controls.length'>
-    <span class='font-medium ml-2.5 w-60'>{{'general.table.name' | translate | uppercase}}</span>
-    <span class='font-medium ml-2.5 w-60'>{{'general.table.sql_type' | translate | uppercase}}</span>
-    <span class='font-medium ml-2.5 w-60'>{{'general.table.generate_type' | translate | uppercase}}</span>
-    <span class='font-medium ml-2.5 w-60'>{{'general.table.option' | translate | uppercase}}</span>
-  </div>
-  <div class='mt-4 relative'>
-    <span *ngIf='!table.controls.length' class='flex justify-center'>{{'general.table.empty' | translate}}</span>
-    <div *ngFor='let field of table.controls; index as index'>
-      <ng-container [formGroup]='field'>
-        <div class='field flex mt-2.5 justify-center'>
-          <div class='bg-white rounded-md shadow-light flex items-center ml-2.5 w-60 h-11 py-0 px-5'>
-            <input formControlName='name' class='outline-border-none' type='text'
-                   placeholder='{{"general.table.name_of_field" | translate}}'/>
-          </div>
-          <div class='justify-between flex bg-white items-center rounded-md cursor-pointer shadow-light
-               ml-2.5 w-60 h-11 py-0 px-5'
-               (click)='isShowSelectType = !isShowSelectType'>
-            <span>{{field.get('sqlType')?.value}}</span>
-            <img class='icon' src='assets/icon/general/down_button.png' alt='down button'/>
-          </div>
-          <div
-            class='justify-between flex bg-white items-center rounded-md cursor-pointer shadow-light ml-2.5 w-60 h-11 py-0 px-5'
-            (click)='isShowSelectType = !isShowSelectType'>
-            <span>{{field.get('generateType')?.value}}</span>
-            <img class='icon' src='assets/icon/general/down_button.png' alt='down button'/>
-          </div>
-          <div class='flex items-center ml-2.5'>
-            <div class='flex items-center'>
-              <span class='font-medium'>{{'general.table.blank' | translate | titlecase}}:</span>
-              <div class='rounded-md bg-white shadow-light flex items-center ml-2.5 h-11 py-0 px-5 w-24'>
-                <input class='outline-border-none w-14' type='text'
-                       placeholder='{{"general.table.blank" | translate | titlecase}}'/>
-              </div>
-            </div>
-            <div class='flex justify-center items-center bg-white rounded-md cursor-pointer ml-2.5 w-11 h-11'>
-              <img class='icon' src='assets/icon/general/sigma.png' alt='sigma'/>
-            </div>
-            <div
-              class='flex justify-center bg-white rounded-md items-center cursor-pointer shadow-light ml-2.5 w-11 h-11'
-              (click)='removeField(index)'>
-              <img class='icon' src='assets/icon/general/delete.png' alt='delete'/>
-            </div>
-          </div>
-        </div>
-      </ng-container>
-    </div>
-    <div class='flex justify-center'>
-      <button type='button'
-              class='bg-main text-white outline-border-none rounded-full text-2xl font-medium shadow-light w-11 h-11 mt-2.5 ml-2.5 mb-0 mr-0'
-              (click)='insertField()'>+
-      </button>
-    </div>
-  </div>
-  <div [formGroup]='config' class='flex items-center mt-5 justify-center'>
-    <div class='flex items-center ml-2.5'>
-      <span class='font-medium'>#{{'general.config.rows' | translate | titlecase}}:</span>
-      <div class='bg-white rounded-md shadow-light flex items-center h-11 px-5 py-0 ml-2.5 w-36'>
-        <input formControlName='row' class='outline-border-none w-24' type='text'
-               placeholder='{{"general.config.rows" | translate}}'/>
-      </div>
-    </div>
-    <div class='flex items-center ml-2.5'>
-      <span class='font-medium'>{{'general.config.format' | translate | titlecase}}:</span>
-      <div
-        class='relative justify-between flex rounded-md bg-white items-center cursor-pointer shadow-light ml-2.5 px-5 py-0 w-36 h-11'
-        (click)='isSelectFormat=!isSelectFormat'>
-        <span>{{config.get('format')?.value}}</span>
-        <img class='icon' src='assets/icon/general/down_button.png' alt='down button'/>
-        <div *ngIf='isSelectFormat' class='absolute top-14 left-0 rounded-md bg-white format w-36'>
-          <p *ngFor='let format of formatsSupported'
-             (click)='changeFormat(format)'
-             class='py-2.5 pl-5 {{format === config.get("format")?.value ? "font-bold" : ""}}'>
-            {{format}}</p>
-        </div>
-      </div>
-    </div>
-    <div class='flex items-center ml-2.5'>
-      <span class='font-medium'>{{'general.config.table_name' | translate | titlecase}}:</span>
-      <div class='bg-white rounded-md shadow-light flex items-center h-11 px-5 py-0 ml-2.5 w-36'>
-        <input formControlName='tableName' class='outline-border-none w-24' type='text'
-               placeholder='{{"general.config.table_name" | translate}}'/>
-      </div>
-    </div>
-    <div class='flex items-center cursor-pointer ml-2.5'
-         (click)='config.get("isIncludeCreateTable")?.setValue(!config.get("isIncludeCreateTable")?.value)'>
-      <div class='shadow-light w-6 h-6 bg-white rounded'>
-        <img *ngIf='config.get("isIncludeCreateTable")?.value' class='icon' src='assets/icon/general/done.png'
-             alt='done'/>
-      </div>
-      <span class='font-medium ml-2.5'>{{'general.config.include_create_table' | translate | uppercase}}</span>
-    </div>
-  </div>
-  <app-footer (downloadOnClickEventEmitter)='downloadOnClick()'
-              (previewOnClickEventEmitter)='previewOnClick()'></app-footer>
-  <app-select-type *ngIf='isShowSelectType' (exitEventEmitter)='isShowSelectType=false'></app-select-type>
-</div>
-<app-preview *ngIf='isShowPreview' [data]='data' [format]='config.get("format")?.value'
-             (exitEventEmitter)='isShowPreview=false'></app-preview>
-
+<app-table [table]='table'></app-table>
+<app-configuration [configuration]='configuration'></app-configuration>
