--- a/mockez-front/src/app/shared/component/preview/preview.component.html
+++ b/mockez-front/src/app/shared/component/preview/preview.component.html
@@ -5,7 +5,7 @@
       <button class='flex justify-between'
               (click)='this.exitEventEmitter.emit()'
       >Close
-        <img class='icon ml-2.5' src='assets/icon/general/cancel.png' alt='cancel'/>
+        <img class='icon ml-2.5' src='../../../../assets/icon/general/cancel.png' alt='cancel'/>
       </button>
     </p>
     <nav class='flex justify-center bg-white h-10'>
@@ -26,7 +26,7 @@
         </tr>
       </table>
       <div *ngIf='!isTable'>
-        <p *ngFor='let line of data | formatPipe:(this.format)'>{{line}}</p>
+        <p *ngFor='let line of data | formatPipe:this.format:tableName'>{{line}}</p>
       </div>
     </section>
     <section class='pagination text-center mt-5'>
