--- a/mockez-front/src/app/shared/layout/component/footer/footer.component.html
+++ b/mockez-front/src/app/shared/layout/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class='fixed inset-x-0 bottom-0 bg-white'>
+<footer class='fixed inset-x-0 bottom-0 bg-white text-sm'>
   <div class='flex justify-center w-full'>
     <div class='flex justify-center h-full'>
       <button type='button' class='uppercase text-center text-black font-medium p-4 w-60'
@@ -8,7 +8,7 @@
     </div>
     <div class='flex justify-center h-full'>
       <button type='button' class='uppercase text-center text-black font-medium p-4 w-60'
-              (click)='previewOnClickEventEmitter.emit()'>
+              (click)='isDisplayPreview=true'>
         {{'general.footer.preview' | translate | uppercase}}
       </button>
     </div>
@@ -25,5 +25,9 @@
     </div>
   </div>
 </footer>
-
+<app-preview
+  *ngIf='isDisplayPreview'
+  (exitEventEmitter)='isDisplayPreview=false'>
+>
+</app-preview>
 
