--- a/mockez-front/src/app/general/component/project/project.component.html
+++ b/mockez-front/src/app/general/component/project/project.component.html
@@ -1,10 +1,10 @@
-<h1 class='flex uppercase font-bold ml-16 mt-20 '>Project</h1>
+<h1 class='flex uppercase font-bold ml-16 mt-20 '>{{'project.title' | translate | uppercase}}</h1>
 <div id='search' class='mt-2 p-4 mx-auto bg-white rounded-md'>
-  <span class='ml-2.5 font-bold'>What are you looking for?</span>
+  <span class='ml-2.5 font-bold'>{{'project.search.title' | translate}}</span>
   <div class='flex ml-5 mt-2'>
     <div class='flex items-center bg-gray rounded-md ml-5 p-2.5 w-3/5 h-10'>
       <img src='assets/icon/navigation/search.png' alt='search'/>
-      <input class='outline-border-none bg-gray w-full ml-2.5' type='text' placeholder='Search for name'/>
+      <input class='outline-border-none bg-gray w-full ml-2.5' type='text' placeholder="{{'project.search.placeholder' | translate}}"/>
     </div>
     <div class='flex items-center rounded-md ml-5 p-2.5 h-10'>
       <img src='assets/icon/project/filter.png' alt='filter'/>
@@ -12,12 +12,12 @@
     <div class='flex h-10 ml-5'>
       <div class='flex justify-center h-10'>
         <button type='button' class='bg-blue-500 rounded-md text-center text-white font-medium w-40'>
-          Search
+          {{'project.search.btn_search' | translate}}
         </button>
       </div>
       <div class='flex justify-center h-10'>
         <button type='button' class='bg-blue-500 rounded-md text-center text-white font-medium ml-5 w-40'>
-          Create a project
+          {{'project.search.btn_create_project' | translate}}
         </button>
       </div>
     </div>
@@ -25,17 +25,17 @@
 </div>
 <div id='form' class='mt-2 p-4 mx-auto bg-white rounded-md'>
   <div class='flex ml-5 mb-2 justify-center'>
-    <span class='font-bold mt-2 ml-2.5 w-1/5'>Project summary</span>
+    <span class='font-bold mt-2 ml-2.5 w-1/5'>{{'project.table.project_summary' | translate}}</span>
     <div class='flex justify-center w-3/5'>
-      <span class='font-bold mt-2 ml-2.5 mr-5'>Show</span>
+      <span class='font-bold mt-2 ml-2.5 mr-5'>{{'project.table.show' | translate}}</span>
       <div class='justify-between flex bg-white items-center rounded-md cursor-pointer shadow-light w-60'>
-        <span class='ml-3'>All column</span>
+        <span class='ml-3'>{{'project.table.all_column' | translate}}</span>
         <img class='icon' src='assets/icon/general/down_button.png' alt='down button'/>
       </div>
     </div>
     <div class='flex justify-center w-1/5 h-10'>
       <button type='button' class=' bg-gray rounded-md text-center text-black font-medium ml-5 w-40'>
-        Delete selected
+        {{'project.table.btn_delete' | translate}}
       </button>
     </div>
     <div class='flex justify-center w-1/5 mt-2'>
@@ -52,9 +52,9 @@
       <input type='checkbox' value=''
              class='w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600'>
     </div>
-    <span class='font-bold mt-2 ml-2.5 w-1/3'>Name</span>
-    <span class='font-bold mt-2 ml-2.5 w-1/3'>Shared with</span>
-    <span class='font-bold mt-2 ml-2.5 w-1/3'>Last modified</span>
+    <span class='font-bold mt-2 ml-2.5 w-1/3'>{{'project.table.name' | translate}}</span>
+    <span class='font-bold mt-2 ml-2.5 w-1/3'>{{'project.table.shared_with' | translate}}</span>
+    <span class='font-bold mt-2 ml-2.5 w-1/3'>{{'project.table.last_modified' | translate}}</span>
     <span class='font-bold mt-2 ml-2.5 w-1/6'></span>
   </div>
 
