--- a/mockez-front/src/app/general/component/project/project.component.html
+++ b/mockez-front/src/app/general/component/project/project.component.html
@@ -82,5 +82,29 @@
       <img class='icon' src='assets/icon/general/delete.png' alt='delete'/>
     </div>
   </div>
+  <div class='flex mt-2 ml-5 justify-between'>
+    <div class='flex items-center mt-2 w-1/6'>
+      <input type='checkbox' value=''
+             class='w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600'>
+    </div>
+    <span class='mt-2 ml-2.5 w-1/3'>Youtobe</span>
+    <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
+    <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
+    <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
+      <img class='icon' src='assets/icon/general/delete.png' alt='delete'/>
+    </div>
+  </div>
+  <div class='flex mt-2 ml-5 justify-between'>
+    <div class='flex items-center mt-2 w-1/6'>
+      <input type='checkbox' value=''
+             class='w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600'>
+    </div>
+    <span class='mt-2 ml-2.5 w-1/3'>Youtobe</span>
+    <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
+    <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
+    <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
+      <img class='icon' src='assets/icon/general/delete.png' alt='delete'/>
+    </div>
+  </div>
 </div>
 
