--- a/mockez-front/src/app/general/component/project/project.component.html
+++ b/mockez-front/src/app/general/component/project/project.component.html
@@ -1,5 +1,5 @@
-<h1 class='flex uppercase font-bold ml-16 mt-20 '>{{'project.title' | translate | uppercase}}</h1>
-<div id='search' class='mt-2 p-4 mx-auto bg-white rounded-md'>
+<h1 class='title flex uppercase font-bold mx-auto mt-20 '>{{'project.title' | translate | uppercase}}</h1>
+<div class='search mt-2 p-4 mx-auto bg-white rounded-md text-sm'>
   <span class='ml-2.5 font-bold'>{{'project.search.title' | translate}}</span>
   <div class='flex ml-5 mt-2'>
     <div class='flex items-center bg-gray rounded-md ml-5 p-2.5 w-3/5 h-10'>
@@ -23,14 +23,14 @@
     </div>
   </div>
 </div>
-<div id='form' class='mt-2 p-4 mx-auto bg-white rounded-md'>
+<div id='form' class='mt-2 p-4 mx-auto bg-white rounded-md text-sm'>
   <div class='flex ml-5 mb-2 justify-center'>
     <span class='font-bold mt-2 ml-2.5 w-1/5'>{{'project.table.project_summary' | translate}}</span>
     <div class='flex justify-center w-3/5'>
       <span class='font-bold mt-2 ml-2.5 mr-5'>{{'project.table.show' | translate}}</span>
       <div class='justify-between flex bg-white items-center rounded-md cursor-pointer shadow-light w-60'>
         <span class='ml-3'>{{'project.table.all_column' | translate}}</span>
-        <img class='icon' src='assets/icon/general/down_button.png' alt='down button'/>
+        <img class='mr-3 icon' src='assets/icon/general/down_button.png' alt='down button'/>
       </div>
     </div>
     <div class='flex justify-center w-1/5 h-10'>
@@ -50,7 +50,7 @@
   <div class='flex ml-5'>
     <div class='flex items-center mt-2 w-1/6'>
       <input type='checkbox' value=''
-             class='w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600'>
+             class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
     </div>
     <span class='font-bold mt-2 ml-2.5 w-1/3'>{{'project.table.name' | translate}}</span>
     <span class='font-bold mt-2 ml-2.5 w-1/3'>{{'project.table.shared_with' | translate}}</span>
@@ -61,7 +61,7 @@
   <div class='flex mt-2 ml-5 justify-between'>
     <div class='flex items-center mt-2 w-1/6'>
       <input type='checkbox' value=''
-             class='w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600'>
+             class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
     </div>
     <span class='mt-2 ml-2.5 w-1/3'>Mockez</span>
     <span class='mt-2 ml-2.5 w-1/3'>Luong Quoc Trung</span>
@@ -73,7 +73,7 @@
   <div class='flex mt-2 ml-5 justify-between'>
     <div class='flex items-center mt-2 w-1/6'>
       <input type='checkbox' value=''
-             class='w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600'>
+             class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
     </div>
     <span class='mt-2 ml-2.5 w-1/3'>Youtobe</span>
     <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
@@ -85,7 +85,7 @@
   <div class='flex mt-2 ml-5 justify-between'>
     <div class='flex items-center mt-2 w-1/6'>
       <input type='checkbox' value=''
-             class='w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600'>
+             class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
     </div>
     <span class='mt-2 ml-2.5 w-1/3'>Youtobe</span>
     <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
@@ -97,7 +97,7 @@
   <div class='flex mt-2 ml-5 justify-between'>
     <div class='flex items-center mt-2 w-1/6'>
       <input type='checkbox' value=''
-             class='w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600'>
+             class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
     </div>
     <span class='mt-2 ml-2.5 w-1/3'>Youtobe</span>
     <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
