--- a/mockez-front/src/app/app.component.html
+++ b/mockez-front/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navigation></app-navigation>
-<app-project></app-project>
+<app-schema></app-schema>
+<!--<app-project></app-project>-->
 <!--<app-general></app-general>-->
 <app-footer></app-footer>
