--- a/mockez-front/src/app/project/component/project/project.component.html
+++ b/mockez-front/src/app/project/component/project/project.component.html
@@ -3,11 +3,11 @@
   <span class='ml-2.5 font-bold'>{{'project.search.title' | translate}}</span>
   <div class='flex ml-5 mt-2'>
     <div class='flex items-center bg-gray rounded-md ml-5 p-2.5 w-3/5 h-10'>
-      <img src='../../../../assets/icon/navigation/search.png' alt='search'/>
+      <img src='/assets/icon/navigation/search.png' alt='search'/>
       <input class='outline-border-none bg-gray w-full ml-2.5' type='text' placeholder="{{'project.search.placeholder' | translate}}"/>
     </div>
     <div class='flex items-center rounded-md ml-5 p-2.5 h-10'>
-      <img src='../../../../assets/icon/project/filter.png' alt='filter'/>
+      <img src='/assets/icon/project/filter.png' alt='filter'/>
     </div>
     <div class='flex h-10 ml-5'>
       <div class='flex justify-center h-10'>
@@ -30,7 +30,7 @@
       <span class='font-bold mt-2 ml-2.5 mr-5'>{{'project.table.show' | translate}}</span>
       <div class='justify-between flex bg-white items-center rounded-md cursor-pointer shadow-light w-60'>
         <span class='ml-3'>{{'project.table.all_column' | translate}}</span>
-        <img class='mr-3 icon' src='../../../../assets/icon/general/down_button.png' alt='down button'/>
+        <img class='mr-3 icon' src='/assets/icon/general/down_button.png' alt='down button'/>
       </div>
     </div>
     <div class='flex justify-center w-1/5 h-10'>
@@ -67,7 +67,7 @@
     <span class='mt-2 ml-2.5 w-1/3'>Luong Quoc Trung</span>
     <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
     <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
-      <img class='icon' src='../../../../assets/icon/general/delete.png' alt='delete'/>
+      <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
     </div>
   </div>
   <div class='flex mt-2 ml-5 justify-between'>
@@ -79,7 +79,7 @@
     <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
     <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
     <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
-      <img class='icon' src='../../../../assets/icon/general/delete.png' alt='delete'/>
+      <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
     </div>
   </div>
   <div class='flex mt-2 ml-5 justify-between'>
@@ -91,7 +91,7 @@
     <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
     <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
     <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
-      <img class='icon' src='../../../../assets/icon/general/delete.png' alt='delete'/>
+      <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
     </div>
   </div>
   <div class='flex mt-2 ml-5 justify-between'>
@@ -103,7 +103,7 @@
     <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
     <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
     <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
-      <img class='icon' src='../../../../assets/icon/general/delete.png' alt='delete'/>
+      <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
     </div>
   </div>
 </div>
