MOC-36: Configure ROUTING

--- a/mockez-front/src/app/app.component.html
+++ b/mockez-front/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-navigation></app-navigation>
-<app-schema></app-schema>
-<!--<app-project></app-project>-->
-<!--<app-general></app-general>-->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
