--- a/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -10,11 +10,11 @@
     </div>
   </div>
   <div class='flex h-full mx-8 my-0'>
-    <a href='#' class='no-underline text-center text-black font-medium w-24 active'>{{'navigation.general' | translate | uppercase}}</a>
+    <a routerLink='/general' routerLinkActive='active' class='no-underline text-center text-black font-medium w-24'>{{'navigation.general' | translate | uppercase}}</a>
     <a href='#' class='no-underline text-center text-black font-medium w-24'>{{'navigation.dataset' | translate | uppercase}}</a>
     <a href='#' class='no-underline text-center text-black font-medium w-24'>{{'navigation.mock_api' | translate | uppercase}}</a>
-    <a href='#' class='no-underline text-center text-black font-medium w-24'>{{'navigation.schema' | translate | uppercase}}</a>
-    <a href='#' class='no-underline text-center text-black font-medium w-24'>{{'navigation.project' | translate | uppercase}}</a>
+    <a routerLink='/schema' routerLinkActive='active' class='no-underline text-center text-black font-medium w-24'>{{'navigation.schema' | translate | uppercase}}</a>
+    <a routerLink='/project' routerLinkActive='active' class='no-underline text-center text-black font-medium w-24'>{{'navigation.project' | translate | uppercase}}</a>
   </div>
   <div class='flex items-center h-full justify-end w-72'>
     <img class='icon cursor-pointer mr-8'
