MOC-34: Implement modalService

--- a/mockez-front/src/app/shared/component/preview/preview.component.html
+++ b/mockez-front/src/app/shared/component/preview/preview.component.html
@@ -3,7 +3,7 @@
     <p class='flex justify-between mt-2.5 font-medium bg-white z-10 pt-5 px-5'>
       PREVIEW
       <button class='flex justify-between'
-              (click)='this.exitEventEmitter.emit()'
+              (click)='closeOnClick()'
       >Close
         <img class='icon ml-2.5' src='../../../../assets/icon/general/cancel.png' alt='cancel'/>
       </button>
