--- a/mockez-front/src/app/shared/layout/component/footer/footer.component.html
+++ b/mockez-front/src/app/shared/layout/component/footer/footer.component.html
@@ -1,14 +1,13 @@
 <footer class='fixed inset-x-0 bottom-0 bg-white text-sm'>
   <div class='flex justify-center w-full'>
     <div class='flex justify-center h-full'>
-      <button type='button' class='uppercase text-center text-black font-medium p-4 w-60'
-              (click)='downloadOnClickEventEmitter.emit()'>
+      <button type='button' class='uppercase text-center text-black font-medium p-4 w-60'>
         {{'general.footer.download_data' | translate | uppercase}}
       </button>
     </div>
     <div class='flex justify-center h-full'>
       <button type='button' class='uppercase text-center text-black font-medium p-4 w-60'
-              (click)='isDisplayPreview=true'>
+              (click)='previewOnClick()'>
         {{'general.footer.preview' | translate | uppercase}}
       </button>
     </div>
@@ -25,9 +24,4 @@
     </div>
   </div>
 </footer>
-<app-preview
-  *ngIf='isDisplayPreview'
-  (exitEventEmitter)='isDisplayPreview=false'>
->
-</app-preview>
 
